force-app/main/default/objects/Check_Request__c/fields/Approved_By_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By (Approver 3)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Check_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>