force-app/main/default/objects/Check_Request__c/fields/Check_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Issue_Date__c</fullName>
    <label>Check Issue Date</label>
    <type>Date</type>
</CustomField>