force-app/main/default/objects/Check_Request__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>IF( RecordType.DeveloperName =&#39;Reimbursement_CA&#39;||RecordType.DeveloperName =&#39;Reimbursement_US&#39; , Case_ID__r.Contact.OtherCity , Field_Service_Agent__r.MailingCity )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>