force-app/main/default/objects/Check_Request__c/fields/Consumer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Check Requests (Consumer Contact)</relationshipLabel>
    <relationshipName>Check_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>