force-app/main/default/objects/Check_Request__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>IF( RecordType.DeveloperName =&#39;Reimbursement_CA&#39;||RecordType.DeveloperName =&#39;Reimbursement_US&#39; , Case_ID__r.Contact.OtherCountry , Field_Service_Agent__r.MailingCountry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>