force-app/main/default/objects/Check_Request__c/fields/CR_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>CR_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to associate the first approver to the record</description>
    <label>CR Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_1</relationshipName>
    <type>Lookup</type>
</CustomField>