force-app/main/default/objects/Check_Request__c/fields/CR_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>CR_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to associate the second approver to the record</description>
    <label>CR Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_2</relationshipName>
    <type>Lookup</type>
</CustomField>