force-app/main/default/objects/Check_Request__c/fields/CR_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>CR_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to associate the third approver to the record</description>
    <label>CR Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_3</relationshipName>
    <type>Lookup</type>
</CustomField>