force-app/main/default/objects/Check_Request__c/fields/Deliver_Check_To__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Check_To__c</fullName>
    <label>Deliver Check To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>