force-app/main/default/objects/Check_Request__c/fields/Field_Service_Agent__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Service Agent</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Influencer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Check Requests(Payment)</relationshipLabel>
    <relationshipName>Check_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>