force-app/main/default/objects/Check_Request__c/fields/Field_Service_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Service Ticket</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Field_Service_Ticket__c.Case_ID__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case_ID__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Field_Service_Ticket__c</referenceTo>
    <relationshipLabel>Check Requests</relationshipLabel>
    <relationshipName>Check_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>