force-app/main/default/objects/Check_Request__c/fields/Name_on_Check__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Check__c</fullName>
    <label>Name on Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>