force-app/main/default/objects/Check_Request__c/fields/Ready_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to trigger the auto submission of the approval process.</description>
    <label>Ready for Approval?</label>
    <type>Checkbox</type>
</CustomField>