force-app/main/default/objects/Check_Request__c/fields/Record_Type_Name_for_template__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name_for_template__c</fullName>
    <formula>if(RecordType.DeveloperName=&#39;Payment_CA&#39;|| RecordType.DeveloperName=&#39;Payment_US&#39;,&#39;Payment&#39;,&#39;	Reimbursement&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name for template</label>
    <type>Text</type>
</CustomField>