force-app/main/default/objects/Check_Request__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>IF( RecordType.DeveloperName =&#39;Reimbursement_CA&#39;||RecordType.DeveloperName =&#39;Reimbursement_US&#39; , Case_ID__r.Contact.OtherState , Field_Service_Agent__r.MailingState )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>