force-app/main/default/objects/Check_Request__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>IF( RecordType.DeveloperName =&#39;Reimbursement_CA&#39;||RecordType.DeveloperName =&#39;Reimbursement_US&#39; , Case_ID__r.Contact.OtherStreet , Field_Service_Agent__r.MailingStreet )</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>