force-app/main/default/objects/Check_Request__c/fields/US_Process_Approver__c.field-meta.xml
<CustomField>
    <fullName>US_Process_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Choose Next Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Check_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>