force-app/main/default/objects/Check_Request__c/fields/W9__c.field-meta.xml
<CustomField>
    <fullName>W9__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>W9</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>W9_Form__c.Influencer_Contact__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Influencer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>W9_Form__c</referenceTo>
    <relationshipLabel>Check Requests</relationshipLabel>
    <relationshipName>Check_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>