force-app/main/default/objects/Check_Request__c/fields/W9_PDF_Link__c.field-meta.xml
<CustomField>
    <fullName>W9_PDF_Link__c</fullName>
    <label>W9 PDF Link</label>
    <type>Url</type>
</CustomField>