force-app/main/default/objects/Check_Request__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <formula>IF( RecordType.DeveloperName =&#39;Reimbursement_CA&#39;||RecordType.DeveloperName =&#39;Reimbursement_US&#39; , Case_ID__r.Contact.OtherPostalCode , Field_Service_Agent__r.MailingPostalCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip/Postal Code</label>
    <type>Text</type>
</CustomField>