force-app/main/default/objects/Check_Request__c/recordTypes/Payment_CA.recordType-meta.xml
<RecordType>
    <fullName>Payment_CA</fullName>
    <active>true</active>
    <label>Payment CA</label>
</RecordType>