force-app/main/default/objects/Check_Request__c/recordTypes/Payment_US.recordType-meta.xml
<RecordType>
    <fullName>Payment_US</fullName>
    <active>true</active>
    <description>For making payment to Field Service Agent</description>
    <label>Payment US</label>
</RecordType>