force-app/main/default/objects/Check_Request__c/recordTypes/Reimbursement_CA.recordType-meta.xml
<RecordType>
    <fullName>Reimbursement_CA</fullName>
    <active>true</active>
    <label>Reimbursement CA</label>
</RecordType>