force-app/main/default/objects/Check_Request__c/recordTypes/Reimbursement_US.recordType-meta.xml
<RecordType>
    <fullName>Reimbursement_US</fullName>
    <active>true</active>
    <description>For reimbursing parts expense to customer.</description>
    <label>Reimbursement US</label>
</RecordType>