force-app/main/default/objects/Check_Request__c/validationRules/Chk_amount_before_submitted_to_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Chk_amount_before_submitted_to_Approver</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  Ready_for_Approval__c , 
OR( IsBlank( Amount__c), 
 Amount__c &lt;= 0 ) 
)</errorConditionFormula>
    <errorMessage>Please enter the Amount to be approved.</errorMessage>
</ValidationRule>