force-app/main/default/objects/Check_Request__c/validationRules/Validate_User_country.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_User_country</fullName>
    <active>false</active>
    <errorConditionFormula>IsBlank(TEXT($User.Region__c))</errorConditionFormula>
    <errorMessage>Please have country specified on user details before saving Check Request. Please contact your administrator for this.</errorMessage>
</ValidationRule>